ghibli-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghibli-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ghibli.doandlearn.app
    secretName: ghibli-tls-cert
  rules:
  - host: ghibli.doandlearn.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghibli-app
            port:
              number: 80
